test/asm/block-comment-termination-error.err
error: block-comment-termination-error.asm(1):
    Unterminated block comment
error: block-comment-termination-error.asm(1):
    syntax error, unexpected end of buffer
Assembly aborted with 2 errors!
