test/asm/block-comment-termination-error.asm
PRINTT /* block comments must terminate before EOF